--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "type": "module",
   "dependencies": {
+    "async-mutex": "^0.4.0",
     "go-cqhttp": "^2.0.0",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
