--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "go-cqhttp": "^2.0.0",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1",
+    "uuid": "^9.0.0",
     "ws": "^8.11.0"
   }
 }
