--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "imbot",
+  "name": "@vvsxmja/imbot",
+  "version": "0.0.1",
   "author": {
     "name": "VVsxmja",
     "email": "vvsxmja@qq.com",
